--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,6 @@
 <body>
 	<p>Welcome to chat app</p>
 	<script type="text/javascript" src="/socket.io/socket.io.js"></script>
-	<script>
-		var socket = io();
-		socket.on('connect', () => {
-			console.log('connected to server');
-		});
-		socket.on('disconnect', () => {
-			console.log('disconnected from server');
-		});
-	</script>
+	<script type="text/javascript" src="/js/index.js"></script>
 </body>
 </html>
