--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,6 @@
 <body>
 	<p>Welcome to chat app</p>
 	<script type="text/javascript" src="/socket.io/socket.io.js"></script>
-	<script type="text/javascript" src="/js/index.js"></script>
+	<script src="/js/index.js"></script>
 </body>
 </html>
