--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,11 @@
 	
 	<ol id="messages"></ol>
 
-	<form action="" id="message-form">
+	<form id="message-form">
 		<input type="text" name="message" placeholder="Message" />
 		<button>Send</button>
 	</form>
+	<button id="send-location">Send Location</button>
 
 	<script type="text/javascript" src="/socket.io/socket.io.js"></script>
 	<script type="text/javascript" src="js/libs/jquery-3.2.0.min.js"></script>
