--- a/public/index.html
+++ b/public/index.html
@@ -3,18 +3,24 @@
 <head>
 	<meta charset="utf-8">
 	<title></title>
+	<link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
-	<p>Welcome to chat app</p>
-	
-	<ol id="messages"></ol>
+<body class="chat">
+	<div class="chat__sidebar">
+		<h3>People</h3>
+		<div id="users"></div>
+	</div>
+	<div class="chat__main">
+		<ol id="messages" class="chat__messages"></ol>
 
-	<form id="message-form">
-		<input type="text" name="message" placeholder="Message" />
-		<button>Send</button>
-	</form>
-	<button id="send-location">Send Location</button>
-
+		<div class="chat__footer">
+			<form id="message-form">
+				<input type="text" name="message" placeholder="Message" autofocus autocomplete="off" />
+				<button>Send</button>
+			</form>
+			<button id="send-location">Send location</button>
+		</div>
+	</div>
 	<script type="text/javascript" src="/socket.io/socket.io.js"></script>
 	<script type="text/javascript" src="js/libs/jquery-3.2.0.min.js"></script>
 	<script src="js/index.js"></script>
